# Antrack

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  copyFromRemoteAndRegenerate.sh  copyToBlueshark.sh  index.html  install_dependencies.sh  params.json  runAndSave.sh
lib/gtest-1.6.0/xcode/UnitTest/: UnitTest.1  main.cpp
lib/gtest.framework/Versions/A/: gtest
matlab/: startup.m  tracker_RobStruck.m
matlab/efficient_kernels/: IntersectionKernel.m  IntersectionKernel_approx.m  IntersectionKernel_fast.m  KernelCalculationAnalyzer.m  analyzeRunningTimes.m  analyzeTimesApproximateKernel.m  binarySearch.m  main.m  startup.m  testKernels.m
matlab/efficient_kernels/ppcreate/: license.txt  ppcreate.m
matlab/parse-json/: ObjStruck_lambda_save.m  createConfigSeqOTB100.m  getSequenceNamesFast.m  getSequenceNamesOTB100.m  getSequenceNamesOTB50.m  main.m  main_OTB100.m  parse_json.m  saveMatFilesFast.m  saveMatFilesOTB100.m  saveMatFilesOTB50.m
matlab/vot2015-tracker-scripts/: README.md  tracker_MBD32L0_1.m  tracker_ObjRobStruck_v1.m  tracker_RobStruck.m
python/Datasets/: downloadWu2013Dataset.py
python/Evaluation/: CompareAllExperiments.py  ConvertMatlabFilesToPickles.py  DatasetEvaluation.py  DatasetEvaluationAllExperiments.py  Visualize.py  VisualizeAllExperiments.py  VisualizeExperiment.py  barplots_example.py  cvpr_2016.py  delete_this.py  fullTable.tex  generatePythonFilePickle.py  paperPlots.py  test.py  vot2014Table.py
python/Evaluation/Plot.ly/: plottt.py
python/Experiments/: clean_data.py  densities.py  obj_scores_for_bbox_generation.py  objectness.py  objectness_barplots.py  objectness_gt_vs_else.py  objectness_multiscale.py
python/Experiments/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
python/Experiments/notebooks/: debug.py  edge_sensitivity.ipynb  objectness_space.ipynb
python/Tracker_wrapper/: Dataset.py  GenerateTracks.py  ObjectnessVisualizer.py  Show straddeling.ipynb  Untitled1.ipynb  blending.py
python/Tracker_wrapper/.ipynb_checkpoints/: Show straddeling-checkpoint.ipynb
python/tensorflow/src/: classify_image.py
scripts/: b_sensitivity.sh  clean.sh  compile.sh  copy_big_g.sh  copy_results_blueshark.sh  copy_results_from_remotes.sh  feature_kernel.sh  filter_experiments.sh  hog_experiments.sh  lambda_e.sh  lambda_full_experiments.sh  lambda_inner.sh  lambda_objness.sh  lambda_objness_iris_retina.sh  lambda_s.sh  lambda_se.sh  objectness_badBoxes.sh  objectness_experiment.sh  objectness_experiments.sh  p_sensitivity.sh  q_sensitivity.sh  qsub_stub.sh  r_sensitivity.sh  rob_struck.sh  straddeling_threshold.sh  tracking_benchmark_M128L0_05BestStruck.sh  tracking_benchmark_M128L0_07BestStruck.sh  tracking_benchmark_M128L0_15.sh  tracking_benchmark_M128L0_15Deep.sh  tracking_benchmark_M128L0_1BestStruck.sh  tracking_benchmark_M128L0_1Deep.sh  tracking_benchmark_M128L0_2.sh  tracking_benchmark_M64BestStruck.sh  tracking_benchmark_M64L0_1BestStruck.sh  tracking_benchmark_M64L0_4BestStruck.sh  tracking_benchmark_M64L0_8BestStruck.sh  tracking_benchmark_MBestStruck.sh  tracking_benchmark_deepstruck_OPE.sh  tracking_benchmark_deepstruck_SRE.sh  tracking_benchmark_deepstruck_TRE.sh  (+5 more)
src/: .clang-format  .dir-locals.el  browse.VC.db  main.cpp  main.cpp~  main_cvpr2016.cpp  main_filter_pretraining.cpp  main_minimum_tracking_example.cpp  main_minimum_tracking_example.cpp.cpp  main_parallel.cpp
src/Datasets/: AllDatasets.h  AllExperimentsRunner.cpp  AllExperimentsRunner.h  DataSetWu2013.cpp  DataSetWu2013.h  Dataset.cpp  Dataset.h  DatasetALOV300.cpp  DatasetALOV300.h  DatasetVOT2014.cpp  DatasetVOT2014.h  DatasetVOT2015.cpp  DatasetVOT2015.h  DatasetWu2015.cpp  DatasetWu2015.h  EvaluationRun.cpp  EvaluationRun.h  Experiment.cpp  Experiment.h  ExperimentDefault.cpp  ExperimentDefault.h  ExperimentRunner.cpp  ExperimentRunner.h  ExperimentSpatialRobustness.cpp  ExperimentSpatialRobustness.h  ExperimentTemporalRobustness.cpp  ExperimentTemporalRobustness.h
src/Datasets/vot2014_trax/: #main.cpp#  main.cpp  region.c  test.c  trax.c
src/Datasets/vot2015_trax/: main.cpp
src/Experiments/: Experiment_efficient_int_kernel.cpp  Experiment_efficient_int_kernel.h
src/Features/: AllFeatures.h  DeepFeatures.cpp  DeepFeatures.h  DeepFeaturesInception.cpp  DeepFeaturesInception.h  DeepPCA.cpp  DeepPCA.h  Feature.h  Haar.cpp  Haar.h  HaarFeature.cpp  HaarFeature.h  HaarFeatureSet.cpp  HaarFeatureSet.h  Histogram.cpp  Histogram.h  HoG.cpp  HoG.h  HoG_PCA.cpp  HoG_PCA.h  HoGandRawFeatures.cpp  HoGandRawFeatures.h  MultiFeature.cpp  MultiFeature.h  RawFeatures.cpp  RawFeatures.h
src/Filter/: KalmanFilter.cpp  KalmanFilter.h  KalmanFilterGenerator.cpp  KalmanFilterGenerator.h
src/Kernels/: #LinearKernel.h#  AdditiveKernel.cpp  AdditiveKernel.h  AllKernels.h  ApproximateKernel.cpp  ApproximateKernel.h  CacheKernel.cpp  CacheKernel.h  IntersectionKernel.cpp  IntersectionKernel.h  IntersectionKernel_additive.cpp  IntersectionKernel_additive.h  IntersectionKernel_fast.cpp  IntersectionKernel_fast.h  Kernel.cpp  Kernel.h  LinearKernel.cpp  LinearKernel.h  MultiKernel.cpp  MultiKernel.h  PiecewiseSpline.h  RBFKernel.cpp  RBFKernel.h  Spline.cpp  Spline.h
src/Superpixels/: Objectness.cpp  Objectness.h  Plot.cpp  Plot.h  README.txt  SEEDS.cpp  SEEDS.h  SuperPixels.cpp  SuperPixels.h  seeds2.cpp  seeds2.h
src/Tests/: DrawRandomImage.cpp  DrawRandomImage.h  IntersectionKernelTest.cpp  IntersectionKernelTest.h  ObjectnessTest.cpp  ObjectnessTest.h  SeedsTest.h  TestObjectness.cpp  TestObjectness.h  a.cpp  a.h  main.cpp  test_project1.cpp
src/Tracker/: #ObjStruck.cpp#  AllTrackers.h  FilterBadBoxesStruck.cpp  FilterBadBoxesStruck.h  LocationSampler.cpp  LocationSampler.h  MBestStruck.cpp  MBestStruck.h  OLaRank_old.cpp  OLaRank_old.h  ObjDetectorStruck.cpp  ObjDetectorStruck.h  ObjStruck.cpp  ObjStruck.h  ScaleDeepStruck.cpp  ScaleDeepStruck.h  Struck.cpp  Struck.h  SupportVector.cpp  SupportVector.h  supportData.cpp  supportData.h
src/python_wrappers/: #tracker_python.cpp#  objectness_topy.cpp  tracker_python.cpp
(+15 files in other folders)
